--- a/catalog.html
+++ b/catalog.html
@@ -102,201 +102,212 @@
     		<h3 class="catalog-filter_section-title">Цена:</h3>
     		<h3 class="catalog-filter_section-title">Производители:</h3>
     		<label>
-                <input type="checkbox" name="check-option1" checked>Bosch
-            </label>
+            <input type="checkbox" name="check-option1" checked>Bosch
+        </label>
     		<label>
-                <input type="checkbox" name="check-option2">Интерскол
-            </label>
+            <input type="checkbox" name="check-option2">Интерскол
+        </label>
     		<label>
-                <input type="checkbox" name="check-option3" checked>Makita
-            </label>
+            <input type="checkbox" name="check-option3" checked>Makita
+        </label>
     		<label>
-                <input type="checkbox" name="check-option4">Dewalt
-            </label>
+            <input type="checkbox" name="check-option4">Dewalt
+         </label>
     		<label>
-                <input type="checkbox" name="check-option5">Hitachi
-            </label>
+            <input type="checkbox" name="check-option5">Hitachi
+        </label>
     		<h3 class="catalog-filter_section-title">Питание:</h3>
     		<label>
-                <input type="radio" name="charge" value="option1">Аккумуляторы
-            </label>
+            <input type="radio" name="charge" value="option1">Аккумуляторы
+        </label>
     		<label>
-                <input type="radio" name="charge" value="option2">Сетевые
-            </label>
+            <input type="radio" name="charge" value="option2">Сетевые
+        </label>
     		<button type="submit">Показать</button>
     	</form>
 
     	<section class="catalog">
     		<h2 class="visually-hidden">Список товаров</h2>
             <div class="catalog-sort">
-                <span>Сортировка:</span>
-                <a href="#" title="По цене">По цене</a>
-                <a href="#" title="По типу">По типу</a>
-                <a href="#" title="По функционалу">По функционалу</a>
-                <a href="#" title="По возрастанию"><img src="icon-up-dir.svg"></a>
-                <a href="#" title="По убыванию"><img src="icon-down-dir.svg"></a>
+                <h3 class="catalog-sort-title">Сортировка:</h3>
+                <form>
+                  <input type="radio" name="sort1" id="sortprice" checked>
+                  <input type="radio" name="sort1" id="sorttype">
+                  <input type="radio" name="sort1" id="sortfunc">
+                  <input type="radio" name="sort2" id="upsort" checked>
+                  <input type="radio" name="sort2" id="downsort">
+                  <label for="sortprice">По цене</label>
+                  <label for="sorttype">По типу</label>
+                  <label for="sortfunc">По функционалу</label>
+                  <label for="upsort">
+                    <img src="icon-up-dir.svg" width="9" height="9" alt="По возрастанию">
+                  </label>
+                  <label for="downsort">
+                    <img src="icon-down-dir.svg" width="9" height="9" alt="По убыванию">
+                  </label>
+                </form>
             </div>
     		<ul class="catalog-list">
     			<li class="catalog-item">
     				<p class="catalog-item-title">
-                        <a href="catalog-item.html" title="Перфоратор BOSCH BFG 3000">Перфоратор BOSCH BFG 3000</a>
-                    </p>
+                <a href="catalog-item.html" title="Перфоратор BOSCH BFG 3000">Перфоратор BOSCH BFG 3000</a>
+            </p>
     				<p class="catalog-item-image">
-                        <a href="catalog-item.html">
-                            <img src="img/product-1.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 3000">
-                        </a>
-                    </p>
+                <a href="catalog-item.html">
+                    <img src="img/product-1.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 3000">
+                </a>
+            </p>
     				<p class="catalog-item-old-price">22500 P.</p>
     				<p class="catalog-item-new-price">
-                        <a href="catalog-item.html" title="15500 P.">15500 P.</a>
-                    </p>
-                    <div class="catalog-user-form-hidden">
-                      <a class="catalog-user-form-button" href="#" title="Купить">Купить</a>
+                <a href="catalog-item.html" title="15500 P.">15500 P.</a>
+            </p>
+            <div class="catalog-user-form-hidden">
+              <a class="catalog-user-form-button" href="#" title="Купить">Купить</a>
                       <a class="catalog-user-form-button" href="#" title="В закладки">В закладки</a>
-                    </div>
+            </div>
     			</li>
      			<li class="catalog-item">
      				<p class="catalog-item-title">
-                        <a href="catalog-item.html" title="Перфоратор BOSCH BFG 6000">Перфоратор BOSCH BFG 6000</a>
-                    </p>
+                <a href="catalog-item.html" title="Перфоратор BOSCH BFG 6000">Перфоратор BOSCH BFG 6000</a>
+            </p>
      				<p class="catalog-item-image">
-                        <a href="catalog-item.html">
-                        <img src="img/product-2.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 6000">
-                    </a></p>
+                <a href="catalog-item.html">
+                <img src="img/product-2.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 6000">
+            </a></p>
      				<p class="catalog-item-old-price">30500 P.</p>
      				<p class="catalog-item-new-price">
-                        <a href="catalog-item.html" title="25500 P.">25500 P.</a>
-                    </p>
-                    <div class="catalog-user-form-hidden">
-                      <a class="catalog-user-form-button" href="#" title="Купить">Купить</a>
-                      <a class="catalog-user-form-button" href="#" title="В закладки">В закладки</a>
-                    </div>
+                <a href="catalog-item.html" title="25500 P.">25500 P.</a>
+            </p>
+            <div class="catalog-user-form-hidden">
+              <a class="catalog-user-form-button" href="#" title="Купить">Купить</a>
+              <a class="catalog-user-form-button" href="#" title="В закладки">В закладки</a>
+            </div>
      			</li>
      			<li class="catalog-item">
      				<p class="catalog-item-title">
-                        <a href="catalog-item.html" title="Перфоратор BOSCH BFG 2000">Перфоратор BOSCH BFG 2000</a>
-                    </p>
+                <a href="catalog-item.html" title="Перфоратор BOSCH BFG 2000">Перфоратор BOSCH BFG 2000</a>
+            </p>
      				<p class="catalog-item-image">
-                        <a href="catalog-item.html">
-                            <img src="img/product-1.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 2000">
-                        </a>
-                    </p>
+                <a href="catalog-item.html">
+                    <img src="img/product-1.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 2000">
+                </a>
+            </p>
      				<p class="catalog-item-new-price">
-                        <a href="catalog-item.html" title="12500 P.">12500 P.</a>
-                    </p>
-                    <div class="catalog-user-form-hidden">
-                      <a class="catalog-user-form-button" href="#" title="Купить">Купить</a>
-                      <a class="catalog-user-form-button" href="#" title="В закладки">В закладки</a>
-                    </div>
-                    <img src="img/new-flag.svg" class="new-flag" width="20" height="20" alt="Новый товар">
+               <a href="catalog-item.html" title="12500 P.">12500 P.</a>
+            </p>
+           <div class="catalog-user-form-hidden">
+             <a class="catalog-user-form-button" href="#" title="Купить">Купить</a>
+             <a class="catalog-user-form-button" href="#" title="В закладки">В закладки</a>
+           </div>
+           <img src="img/new-flag.svg" class="new-flag" width="20" height="20" alt="Новый товар">
      			</li>
      			<li class="catalog-item">
      				<p class="catalog-item-title">
-                        <a href="catalog-item.html" title="Перфоратор BOSCH BFG 3000">Перфоратор BOSCH BFG 3000</a>
-                    </p>
+                <a href="catalog-item.html" title="Перфоратор BOSCH BFG 3000">Перфоратор BOSCH BFG 3000</a>
+            </p>
      				<p class="catalog-item-image">
-                        <a href="catalog-item.html">
-                            <img src="img/product-1.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 3000">
-                        </a>
-                    </p>
+                <a href="catalog-item.html">
+                    <img src="img/product-1.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 3000">
+                </a>
+            </p>
      				<p class="catalog-item-old-price">22500 P.</p>
      				<p class="catalog-item-new-price">
-                        <a href="catalog-item.html" title="15500 P.">15500 P.</a>
-                    </p>
-                    <div class="catalog-user-form-hidden">
-                      <a class="catalog-user-form-button" href="#" title="Купить">Купить</a>
-                      <a class="catalog-user-form-button" href="#" title="В закладки">В закладки</a>
-                    </div>
+                <a href="catalog-item.html" title="15500 P.">15500 P.</a>
+            </p>
+            <div class="catalog-user-form-hidden">
+              <a class="catalog-user-form-button" href="#" title="Купить">Купить</a>
+              <a class="catalog-user-form-button" href="#" title="В закладки">В закладки</a>
+            </div>
      			</li>
      			<li class="catalog-item">
      				<p class="catalog-item-title">
-                        <a href="catalog-item.html" title="Перфоратор BOSCH BFG 6000">Перфоратор BOSCH BFG 6000</a>
-                    </p>
+                <a href="catalog-item.html" title="Перфоратор BOSCH BFG 6000">Перфоратор BOSCH BFG 6000</a>
+            </p>
      				<p class="catalog-item-image">
-                        <a href="catalog-item.html">
-                            <img src="img/product-2.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 6000">
-                        </a>
-                    </p>
+                <a href="catalog-item.html">
+                    <img src="img/product-2.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 6000">
+                </a>
+            </p>
      				<p class="catalog-item-old-price">30500 P.</p>
      				<p class="catalog-item-new-price">
-                        <a href="catalog-item.html" title="25500 P.">25500 P.</a>
-                    </p>
-                    <div class="catalog-user-form-hidden">
-                      <a class="catalog-user-form-button" href="#" title="Купить">Купить</a>
+                <a href="catalog-item.html" title="25500 P.">25500 P.</a>
+            </p>
+            <div class="catalog-user-form-hidden">
+              <a class="catalog-user-form-button" href="#" title="Купить">Купить</a>
                       <a class="catalog-user-form-button" href="#" title="В закладки">В закладки</a>
-                    </div>
-                    <img src="img/new-flag.svg" class="new-flag" width="20" height="20" alt="Новый товар">
+            </div>
+            <img src="img/new-flag.svg" class="new-flag" width="20" height="20" alt="Новый товар">
      			</li>
      			<li class="catalog-item">
      				<p class="catalog-item-title">
-                        <a href="catalog-item.html" title="Перфоратор BOSCH BFG 2000">Перфоратор BOSCH BFG 2000</a>
-                    </p>
+                <a href="catalog-item.html" title="Перфоратор BOSCH BFG 2000">Перфоратор BOSCH BFG 2000</a>
+            </p>
      				<p class="catalog-item-image">
-                        <a href="catalog-item.html">
-                            <img src="img/product-1.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 2000">
-                        </a>
-                    </p>
+                <a href="catalog-item.html">
+                    <img src="img/product-1.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 2000">
+                </a>
+            </p>
      				<p class="catalog-item-new-price">
-                        <a href="catalog-item.html" title="12500 P.">12500 P.</a>
-                    </p>
-                    <div class="catalog-user-form-hidden">
-                      <a class="catalog-user-form-button" href="#" title="Купить">Купить</a>
+                <a href="catalog-item.html" title="12500 P.">12500 P.</a>
+            </p>
+            <div class="catalog-user-form-hidden">
+              <a class="catalog-user-form-button" href="#" title="Купить">Купить</a>
                       <a class="catalog-user-form-button" href="#" title="В закладки">В закладки</a>
-                    </div>
+            </div>
      			</li>
      			<li class="catalog-item">
      				<p class="catalog-item-title">
-                        <a href="catalog-item.html" title="Перфоратор BOSCH BFG 3000">Перфоратор BOSCH BFG 3000</a>
-                    </p>
+                <a href="catalog-item.html" title="Перфоратор BOSCH BFG 3000">Перфоратор BOSCH BFG 3000</a>
+            </p>
      				<p class="catalog-item-image">
-                        <a href="catalog-item.html">
-                            <img src="img/product-1.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 3000">
-                        </a>
-                    </p>
+                <a href="catalog-item.html">
+                    <img src="img/product-1.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 3000">
+                </a>
+            </p>
      				<p class="catalog-item-old-price">22500 P.</p>
      				<p class="catalog-item-new-price">
-                        <a href="catalog-item.html" title="15500 P.">15500 P.</a>
-                    </p>
-                    <div class="catalog-user-form-hidden">
-                      <a class="catalog-user-form-button" href="#" title="Купить">Купить</a>
-                      <a class="catalog-user-form-button" href="#" title="В закладки">В закладки</a>
-                    </div>
-                    <img src="img/new-flag.svg" class="new-flag" width="20" height="20" alt="Новый товар">
+                <a href="catalog-item.html" title="15500 P.">15500 P.</a>
+            </p>
+            <div class="catalog-user-form-hidden">
+              <a class="catalog-user-form-button" href="#" title="Купить">Купить</a>
+              <a class="catalog-user-form-button" href="#" title="В закладки">В закладки</a>
+            </div>
+            <img src="img/new-flag.svg" class="new-flag" width="20" height="20" alt="Новый товар">
      			</li>
      			<li class="catalog-item">
      				<p class="catalog-item-title">
-                        <a href="catalog-item.html" title="Перфоратор BOSCH BFG 6000">Перфоратор BOSCH BFG 6000</a>
-                    </p>
+                <a href="catalog-item.html" title="Перфоратор BOSCH BFG 6000">Перфоратор BOSCH BFG 6000</a>
+            </p>
      				<p class="catalog-item-image">
-                        <a href="catalog-item.html">
-                            <img src="img/product-2.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 6000">
-                        </a>
-                    </p>
+                <a href="catalog-item.html">
+                    <img src="img/product-2.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 6000">
+                </a>
+            </p>
      				<p class="catalog-item-old-price">30500 P.</p>
      				<p class="catalog-item-new-price">
-                        <a href="catalog-item.html" title="25500 P.">25500 P.</a>
-                    </p>
-                    <div class="catalog-user-form-hidden">
-                      <a class="catalog-user-form-button" href="#" title="Купить">Купить</a>
-                      <a class="catalog-user-form-button" href="#" title="В закладки">В закладки</a>
-                    </div>
+                <a href="catalog-item.html" title="25500 P.">25500 P.</a>
+            </p>
+            <div class="catalog-user-form-hidden">
+              <a class="catalog-user-form-button" href="#" title="Купить">Купить</a>
+              <a class="catalog-user-form-button" href="#" title="В закладки">В закладки</a>
+            </div>
      			</li>
      			<li class="catalog-item">
      				<p class="catalog-item-title">
-                        <a href="catalog-item.html" title="Перфоратор BOSCH BFG 2000">Перфоратор BOSCH BFG 2000</a>
-                    </p>
+                <a href="catalog-item.html" title="Перфоратор BOSCH BFG 2000">Перфоратор BOSCH BFG 2000</a>
+            </p>
      				<p class="catalog-item-image">
-                        <a href="catalog-item.html">
-                            <img src="img/product-1.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 2000">
-                        </a>
-                    </p>
+                <a href="catalog-item.html">
+                    <img src="img/product-1.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 2000">
+                </a>
+            </p>
      				<p class="catalog-item-new-price">
-                        <a href="catalog-item.html" title="12500 P.">12500 P.</a>
-                    </p>
-                    <div class="catalog-user-form-hidden">
-                      <a class="catalog-user-form-button" href="#" title="Купить">Купить</a>
-                      <a class="catalog-user-form-button" href="#" title="В закладки">В закладки</a>
-                    </div>
+                <a href="catalog-item.html" title="12500 P.">12500 P.</a>
+            </p>
+            <div class="catalog-user-form-hidden">
+              <a class="catalog-user-form-button" href="#" title="Купить">Купить</a>
+              <a class="catalog-user-form-button" href="#" title="В закладки">В закладки</a>
+            </div>
      			</li>
     		</ul>
             <ul class="catalog-pagination-list">
