--- a/index.html
+++ b/index.html
@@ -65,43 +65,47 @@
 
     <main>
       <div class="main_products-menu">
-          <div class="main_products-menu_materials">
-              <h3 class="main_products-menu_materials-title">Материалы</h3>
+          <div class="main_products-menu_item">
+              <h3 class="main_products-menu_item-title">Материалы</h3>
               <img src="img/icon-1.svg" width="44" height="65" alt="Материалы">
               <a class="main_products-menu_button" href="materials.html" title="Материалы">На любой вкус</a>
               <img src="img/new-flag.svg" class="new-flag" width="20" height="20" alt="Новый товар">
           </div>
-          <div class="main_products-menu_tools">
-              <h3 class="main_products-menu_tools-title">Инструмент</h3>
+          <div class="main_products-menu_item">
+              <h3 class="main_products-menu_item-title">Инструмент</h3>
               <img src="img/icon-2.svg" width="75" height="61" alt="Инструмент">
               <a class="main_products-menu_button" href="tools.html" title="Инструмент">На все случаи</a>
           </div>
-          <div class="main_products-menu_machinery">
-              <h3 class="main_products-menu_machinery-title">Техника</h3>
+          <div class="main_products-menu_item">
+              <h3 class="main_products-menu_item-title">Техника</h3>
               <img src="img/icon-3.svg" width="78" height="62" alt="Техника">
               <a class="main_products-menu_button" href="machinery.html" title="Техника">Для стройки</a>
           </div>
-          <div class="main_products-menu_sales">
-              <h3 class="main_products-menu_sales-title">Скидки 50%</h3>
+          <div class="main_products-menu_item">
+              <h3 class="main_products-menu_item-title">Скидки 50%</h3>
               <img src="img/icon-4.svg" width="59" height="72" alt="Скидки 50%">
               <a class="main_products-menu_button" href="sales.html" title="Скидки 50%">На 350 товаров</a>
           </div>
-          <div class="main_products-menu_delivery">
-              <h3 class="main_products-menu_delivery-title">Доставка</h3>
+          <div class="main_products-menu_item">
+              <h3 class="main_products-menu_item-title">Доставка</h3>
               <img src="img/icon-5.svg" width="78" height="63" alt="Доставка">
               <a class="main_products-menu_button" href="delivery.html" title="Доставка">Бесплатно</a>
           </div>
           <div class="main_products-menu_slider">
-              <div>
-                  <h3 class="main_products-menu_slider-title">Дрели</h3>
-                  <p class="main_products-menu_slider-description">Соседям на радость!</p>
-                  <img src="img/drill.jpg" width="620" height="266" alt="Дрели">
-              </div>
-              <div>
-                  <h3 class="main_products-menu_slider-title">Перфораторы</h3>
-                  <p class="main_products-menu_slider-description">Настоящие мужские игрушки</p>
-                  <img src="img/perforator.jpg" width="620" height="266" alt="Перфораторы">
-              </div>
+            <input type="radio" name="slider1" id="drill-slide">
+            <label for="drill-slide" class=""><img src="img/icon-left.svg" height="40" width="22" alt="Стрелка влево"></label>
+            <div>
+                <h3 class="main_products-menu_slider-title">Дрели</h3>
+                <p class="main_products-menu_slider-description">Соседям на радость!</p>
+                <img src="img/drill.jpg" width="620" height="266" alt="Дрели">
+            </div>
+            <input type="radio" name="slider1" id="perforator-slide">
+            <label for="perforator-slide" class=""><img src="img/icon-right.svg" height="40" width="22" alt="Стрелка вправо"></label>
+            <div>
+                <h3 class="main_products-menu_slider-title">Перфораторы</h3>
+                <p class="main_products-menu_slider-description">Настоящие мужские игрушки</p>
+                <img src="img/perforator.jpg" width="620" height="266" alt="Перфораторы">
+            </div>
           </div>
       </div>
 
@@ -238,16 +242,37 @@
           <h2 class="main_service-title">Сервисы</h2>
           <p class="main_service-description">Хороший интернет-магазин отличается от плохого не только ценами! Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
           <ul class="main_service-list">
-                <li class="main_service-list-item">
-                    <a class="service-list-button" href="#" title="Доставка">Доставка</a>
-                </li>
-                <li class="main_service-list-item">
-                    <a class="service-list-button" href="#" title="Гарантия">Гарантия</a>
-                </li>
-                <li class="main_service-list-item">
-                    <a class="service-list-button" href="#" title="Кредит">Кредит</a>
-                </li>
+              <li class="main_service-list-item">
+                  <label for="delivery-slide" class="main_service-label">Доставка</label>
+                  <input type="radio" name="slider2" id="delivery-slide">
+              </li>
+              <li class="main_service-list-item">
+                  <label for="guarantee-slide" class="main_service-label">Гарантия</label>
+                  <input type="radio" name="slider2" id="guarantee-slide">
+              </li>
+              <li class="main_service-list-item">
+                  <label for="loan-slide" class="main_service-label">Кредит</label>
+                  <input type="radio" name="slider2" id="loan-slide">
+              </li>
           </ul>
+          <div class="main_service-delivery-slide">
+            <h3>Доставка</h3>
+            <p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно!
+              <br>Ведь мы неплохо заработаем, поднимая его на ваш этаж!</p>
+            <img src="img/delivery.png" width="468" height="261" alt="Доставка">
+          </div>
+          <div class="main_service-guarantee-slide">
+            <h3>Гарантия</h3>
+            <p>Если купленный у нас товар поломается или заискрит, а также в случае пожара, спровоцированного его возгаранием,  вы всегда можете быть уверены в нашей гарантии. Мы обменяем сгоревший товар на новый. 
+              <br>Дом уж восстановите как-нибудь сами.</p>
+            <img src="img/guarantee.png" width="389" height="283" alt="Гарантия">
+          </div>
+          <div class="main_service-loan-slide">
+            <h3>Кредит</h3>
+            <p>Залезть в долговую яму стало проще! 
+              <br>Кредитные консультанты придут вам на помощь.</p>
+            <img src="img/loan.png" width="465" height="285" alt="Кредит">
+          </div>
       </section>
 
       <section class="main_information">
