--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 
     <header class="main-header">
     	<div class="header-top">
-    	    <a class="logo" href="index.html" title="Техномарт"><img src="img/logo.svg" width="111" height="18" alt="Техномарт"></a>
+    	    <a class="logo" href="index.html" title="Техномарт"><img src="img/logo.svg" width="111" height="18" alt="Логотип магазина «Техномарт»"></a>
     	    <form action="/" method="post" class="header__search-form">
-    		   <input type="search" name="search-form" class="header__search-form-input" placeholder="Поиск:">
-           <button type="submit" name="submit-btn" class="header__search-form-button"></button>
+    		   <input type="search" name="search-form" class="header__search-form-input" placeholder="Поиск:" aria-label="Кнопка поиска">
+           <button type="submit" name="submit-btn" class="header__search-form-button" aria-label="Кнопка поиска"></button>
     	    </form>
     	    <a class="header__user-button" href="#" title="Закладки">
             <img src="img/icon-bookmark.svg" alt="Закладки" width="15" height="15">
@@ -29,7 +29,7 @@
         <div class="header-center">
         	<h1>Интернет-магазин строительных материалов и инструментов для ремонта</h1>
         	<div class="header_adress">
-            <a class="header_adress-tel-number" href="tel:+78125550555">+7 (812) 555-05-55</a>
+            <a class="header_adress-tel-number" href="tel:+78125550555" aria-label="Номер телефона магазина">+7 (812) 555-05-55</a>
             <p class="header_adress-adress">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
           </div>
         	<a class="sign-in-button" href="sign-in.html" title="Войти"><img src="img/icon-login.svg" alt="Войти" width="20" height="17">Войти</a>
@@ -106,13 +106,14 @@
                 <p class="main_products-menu_slider-description">Настоящие мужские игрушки</p>
                 <img src="img/perforator.jpg" width="620" height="266" alt="Перфораторы">
             </div>
+            <a class="button" href="catalog.html" title="Открыть каталог">Открыть каталог</a>
           </div>
       </div>
 
       <section class="main_popular-products">
         <div class="main-popular-top">
           <h2 class="main-popular-title">Популярные товары:</h2>
-          <a class="popular-button" href="#" title="">Все популярные товары</a>
+          <a class="button" href="#" title="">Все популярные товары</a>
         </div>
         <ul class="main_popular-products-list">
             <li class="catalog-item">
@@ -169,7 +170,7 @@
       <section class="main_popular-brands">
         <div class="main-popular-top">
           <h2 class="main-popular-title">Популярные производители:</h2>
-          <a class="popular-button" href="#" title="Все производители">Все производители</a>
+          <a class="button" href="#" title="Все производители">Все производители</a>
         </div>
         <ul class="main_popular-brands-list">
             <li class="brands-item">
@@ -262,7 +263,7 @@
     		      <li class="main_our-partners-item">Авторейдинг</li>
     		      <li class="main_our-partners-item">ЖелДорЭкспедиция</li>
     	   </ul>
-    		  <a class="main_information-button" href="about-us.html" title="Подробнее о компании">Подробнее о компании</a>
+    		  <a class="button" href="about-us.html" title="Подробнее о компании">Подробнее о компании</a>
     	  </div>
     	  <div class="main-contacts">
     		  <h2 class="main_information-title">Контакты</h2>
@@ -270,14 +271,14 @@
               <a class="main_information-map-small" href="#" title="Карта">
                   <img src="img/map-small.jpg" width="300" height="158" alt="Карта">
               </a>
-    		  <a class="main_information-button" href="send-mail.html" title="Заблудились? Напишите нам!">Заблудились? Напишите нам!</a>
+    		  <a class="button" href="send-mail.html" title="Заблудились? Напишите нам!">Заблудились? Напишите нам!</a>
     	  </div>
       </section>
     </main>
 
     <footer class="main-footer">
       <div class="footer-top">
-        <a class="logo" href="index.html" title="Техномарт"><img src="img/logo.svg" width="111" height="18" alt="Техномарт"></a>
+        <a class="logo" href="index.html" title="Техномарт"><img src="img/logo.svg" width="111" height="18" alt="Логотип магазина «Техномарт»"></a>
             <ul class="footer-nav">
                 <li>
                     <a href="about-us.html" title="Компания">Компания</a>
@@ -297,7 +298,7 @@
             </ul>
         <div class="footer-adress">
             <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
-            <a href="tel:+78125550555">+7 (812) 555-05-55</a>
+            <a href="tel:+78125550555"  aria-label="Номер телефона магазина">+7 (812) 555-05-55</a>
           </div>
         <ul class="footer-nav">
             <li>
@@ -337,6 +338,28 @@
         </div>
       </div>
     </footer>
+
+    <section class="modal modal-mail">
+      <form class="mail-form" action="/" method="post">
+        <div class="mail-form-part">
+          <label class="mail-form-label" for="mail-form-name">Ваше имя:</label>
+          <input class="half-size" type="text" name="name" placeholder="Имя Фамилия" id="mail-form-name">
+          <label class="mail-form-label" for="mail-form-email">Ваш e-mail:</label>
+          <input class="half-size" type="text" name="e-mail" placeholder="email@example.com" id="mail-form-email">
+        </div>
+        <div class="mail-form-part">
+          <label class="mail-form-label" for="mail-text">Текст письма:</label>
+          <textarea class="mail-form-textarea" rows="3" id="mail-text" placeholder="В свободной форме"></textarea>
+        </div>
+        <button class="button" type="submil">Отправить</button>
+      </form>
+      <button class="close-button" type="button">Закрыть</button>
+    </section>
+
+    <section class="modal modal-map">
+      <img src="img/map.jpg" width="940" height="446" alt="Офис компании знаходится по адресу ул. Большая Конюшенная 19/8, город Санкт-Петербург">
+      <button class="close-button" type="button">Закрыть</button>
+    </section>
 
   </body>
 </html>
